# ChangeLog for app-emacs/mailcrypt
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/mailcrypt/ChangeLog,v 1.17 2007/07/04 23:07:57 opfer Exp $

  04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  mailcrypt-3.5.8-r1.ebuild:
  removed pkg_postrm(); reordered KEYWORDS; manual make call to emake; removed
  virtual/emacs from DEPEND; added some quotes; added some die comments;
  prettied up SITEFILE handling

  29 May 2007; Ulrich Mueller <ulm@gentoo.org> -mailcrypt-3.5.8.ebuild:
  Remove old.

  28 May 2007; Christian Faulhammer <opfer@gentoo.org>
  mailcrypt-3.5.8-r1.ebuild:
  really stable it and RESTRICT=test

  28 May 2007; Christian Faulhammer <opfer@gentoo.org>
  mailcrypt-3.5.8-r1.ebuild:
  stable amd64, bug 180027. Removed test suite (will not work in sandbox).
  Quoted some variables

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50mailcrypt-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  28 Jan 2007; Marius Mauch <genone@gentoo.org> mailcrypt-3.5.8.ebuild,
  mailcrypt-3.5.8-r1.ebuild:
  Replacing einfo with elog

*mailcrypt-3.5.8-r1 (24 Nov 2006)

  24 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  +mailcrypt-3.5.8-r1.ebuild:
  added test USE flag to pull in dev-python/py-gnupg and modified src_test().
  Reverted amd64 to ~amd64 as they don't have dev-python/py-gnupg in stable,
  all other arches stay

  31 Oct 2004; Jason Wever <weeve@gentoo.org> mailcrypt-3.5.8.ebuild:
  Stable on sparc.

  10 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -mailcrypt-3.5.7.ebuild,
  mailcrypt-3.5.8.ebuild:
  Stable on ppc.

  10 May 2004; Jason Wever <weeve@gentoo.org> mailcrypt-3.5.8.ebuild:
  Added ~sparc keyword to help resolve bug #50695.

  26 Apr 2004; David Holm <dholm@gentoo.org> mailcrypt-3.5.8.ebuild:
  Added to ~ppc.

  26 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> mailcrypt-3.5.7.ebuild,