@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50mailcrypt-gentoo.el 78 RMD160 8f6a6c8b9390f579e42f91c130e2be639a401021 SHA1 1c057b65ef37cb38159838108dd75589d9ff0145 SHA256 25917739f5d343a8e79f6d07a5ca42e7625922ed50ee7128da62d4224ef5ae44
 DIST mailcrypt-3.5.8.tar.gz 213415 RMD160 95b6d90f0747d970407cf8ad7d6ba613fab7b4bd SHA1 5c107c74150113bdb9ddd76dccf1ad62eec3c296 SHA256 b0b79eefa9d00b0e794d7423476cd63c19d48e1bf0196a175e8b67c5ab8a9fe7
-EBUILD mailcrypt-3.5.8-r1.ebuild 1015 RMD160 ef2373c4b8d6e91f8906a21642a543331d1c7d83 SHA1 d9f981039a621fee4ce50f48ea92ea75e86f063f SHA256 c356c41b68489018729e2407126082714be6a4473ce76f7998b6b16b54d4d40c
-MISC ChangeLog 2381 RMD160 ed23c993a42897b9be87e66e8d2c3cf38399d433 SHA1 e0862e1575c9b2321c0ab8c0abbbf3d2ce375cc0 SHA256 88f51b9dcd7cb535bef20762a500904902a14e5521675fd4125dacc105769a83
+EBUILD mailcrypt-3.5.8-r1.ebuild 1023 RMD160 c486985ac555fa2212e5fe278ead55deb47f6220 SHA1 48daa2dfb3641b52cbb6edb020374d0e6187facd SHA256 f8f3b5684ec8ef919d63812b4005d87484ce6a5e55a66942eeeaf5e413902f8c
+MISC ChangeLog 2486 RMD160 270557766bc9862df44078d645a05d181c974c3c SHA1 4b2c92c5abf4a011c2d97ba3d46fc8a7e90695cd SHA256 0fb02626a95599874062089946a3fb12b39e50256389b261f6ea14364eb9346a
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.9 (GNU/Linux)
+
+iEYEARECAAYFAkoqjXYACgkQOeoy/oIi7uzTdgCZAY8cHhGxgd/BuTXME65HzLvB
+cZUAnRgnfiysbNU7Hpol+gD8/vRIGJw6
+=F/Ps
+-----END PGP SIGNATURE-----
