@@ -1,22 +1,22 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/mailcrypt/mailcrypt-3.5.8-r1.ebuild,v 1.5 2007/07/04 23:07:57 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/mailcrypt/mailcrypt-3.5.8-r1.ebuild,v 1.6 2009/06/06 15:36:49 ulm Exp $
 
 inherit elisp
 
 DESCRIPTION="Provides a simple interface to public key cryptography with OpenPGP."
 HOMEPAGE="http://mailcrypt.sourceforge.net/"
 SRC_URI="mirror://sourceforge/mailcrypt/${P}.tar.gz"
+
 LICENSE="GPL-2"
 SLOT="0"
-IUSE=""
-
 KEYWORDS="amd64 ppc sparc x86"
-
-RDEPEND="${DEPEND}
-	app-crypt/gnupg"
+IUSE=""
 RESTRICT="test"
-SITEFILE=50${PN}-gentoo.el
+
+RDEPEND="app-crypt/gnupg"
+
+SITEFILE="50${PN}-gentoo.el"
 
 src_compile() {
 	export EMACS=/usr/bin/emacs
@@ -33,6 +33,7 @@ src_install() {
 pkg_postinst() {
 	elisp-site-regen
 	elog
-	elog "See /usr/share/doc/${P}/INSTALL.gz for how to customize mailcrypt"
+	elog "See the INSTALL file in /usr/share/doc/${PF} for how to"
+	elog "customize mailcrypt"
 	elog
 }
