@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/mailcrypt
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/mailcrypt/ChangeLog,v 1.17 2007/07/04 23:07:57 opfer Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/mailcrypt/ChangeLog,v 1.18 2009/06/06 15:36:49 ulm Exp $
+
+  06 Jun 2009; Ulrich Mueller <ulm@gentoo.org> mailcrypt-3.5.8-r1.ebuild:
+  Fix elog message, bug 272895.
 
   04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
   mailcrypt-3.5.8-r1.ebuild:
